[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprites/UI/VolumeButton1.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Systems/MainAudioController.gd" type="Script" id=2]
[ext_resource path="res://Sprites/UI/VolumeButton2.png" type="Texture" id=3]
[ext_resource path="res://Sprites/UI/VolumeButton3.png" type="Texture" id=4]

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="fullvol" type="Button" parent="."]
margin_left = -69.5786
margin_top = -65.2315
margin_right = 70.4214
margin_bottom = 68.7685
icon = ExtResource( 1 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="halfvol" type="Button" parent="."]
visible = false
margin_left = -69.5786
margin_top = -65.2315
margin_right = 70.4214
margin_bottom = 68.7685
icon = ExtResource( 3 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="novol" type="Button" parent="."]
visible = false
margin_left = -69.5786
margin_top = -65.2315
margin_right = 70.4214
margin_bottom = 68.7685
icon = ExtResource( 4 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="fullvol" to="." method="_on_fullvol_pressed"]
[connection signal="pressed" from="halfvol" to="." method="_on_halfvol_pressed"]
[connection signal="pressed" from="novol" to="." method="_on_novol_pressed"]
